--- a/assignments/css/Frameworks/ POS system Using Bootstrap/index.html
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/index.html
@@ -5,6 +5,11 @@
   <title>POS System</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body{
+      background: #e6ecff;
+    }
+  </style>
 </head>
 
 <body>
@@ -12,7 +17,10 @@
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg bg-light shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">
+      <img src="assets/img/shopping%20logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      POS System
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
