POS System updated

--- a/assignments/css/Frameworks/ POS system Using Bootstrap/Order.html
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/Order.html
@@ -115,15 +115,15 @@
           </div>
           <div class="col-6 pb-3">
             <label for="lblPrice" class="form-label">Price</label>
-            <input type="text" class="form-control" id="lblPrice" placeholder="Example input placeholder">
+            <input type="text" class="form-control" id="lblPrice" placeholder="100.0">
           </div>
           <div class="col-6 pb-3">
             <label for="qtyOnH" class="form-label">Qty On Hand</label>
-            <input type="text" class="form-control" id="qtyOnH" placeholder="Example input placeholder">
+            <input type="text" class="form-control" id="qtyOnH" placeholder="100">
           </div>
           <div class="col-12 pb-3">
             <label for="orderQty" class="form-label">Order Quantity</label>
-            <input type="text" class="form-control" id="orderQty" placeholder="Example input placeholder">
+            <input type="text" class="form-control" id="orderQty" placeholder="Qty">
           </div>
           <div class="modal-footer col-12 pb-2">
             <button class="btn btn-danger" type="button">Add Item</button>
