--- a/assignments/css/Frameworks/ POS system Using Bootstrap/index.html
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/index.html
@@ -5,6 +5,9 @@
   <title>POS System</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/css/Style.css" rel="stylesheet">
+  <link href="assets/Fontawesome/all.min.css" rel="stylesheet">
+
   <style>
     body{
       background: #e6ecff;
@@ -45,6 +48,108 @@
 <!--Navbar End-->
 
 <!--content-->
+<main class="container-fluid">
+  <div class="container-fluid">
+    <section class="row mt-5 ">
+      <div class="dash-col col-sm-6 col-xl-3  ">
+        <div class="dash-2col border rounded-3 d-flex align-items-center justify-content-evenly p-4">
+          <i class="fa-solid fa-chart-line fa-3x text-primary"></i>
+          <div>
+            <h4>Today Sales</h4>
+            <h6 class="mb-0">$1234</h6>
+          </div>
+        </div>
+      </div>
+      <div class="dash-col col-sm-6 col-xl-3">
+        <div class="dash-2col border rounded-3 d-flex align-items-center justify-content-evenly p-4">
+          <i class="fa-solid  fa-dollar-sign fa-3x text-primary"></i>
+          <div>
+            <h4>Total Sales</h4>
+            <h6 class="mb-0">$1234</h6>
+          </div>
+        </div>
+      </div>
+      <div class="dash-col col-sm-6 col-xl-3">
+        <div class="dash-2col border rounded-3 d-flex align-items-center justify-content-evenly p-4">
+          <i class="fa-solid fa-cart-shopping fa-3x text-primary"></i>
+          <div>
+            <h4>Items</h4>
+            <h6 class="mb-0">34</h6>
+          </div>
+        </div>
+      </div>
+      <div class="dash-col  pe-0  col-sm-6 col-xl-3">
+        <div class="dash-2col border rounded-3 d-flex align-items-center justify-content-evenly p-4">
+          <i class="fa-solid fa-users fa-3x text-primary"></i>
+          <div>
+            <h4>Customers</h4>
+            <h6 class="mb-0">234</h6>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="table-style row mt-4 border rounded-3 p-2 ms-0 me-0">
+      <div class="pb-2"><h3>Recent Sales</h3></div>
+      <div class="col mt-2 table-responsive">
+        <table class="table table-bordered table-hover">
+          <thead>
+          <tr>
+            <th scope="col">Invoice</th>
+            <th scope="col">Date</th>
+            <th scope="col">Customer</th>
+            <th scope="col">Amount</th>
+            <th scope="col">Status</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <th scope="row">INV-0123</th>
+            <td>Sep 2022</td>
+            <td>Jhon Smith</td>
+            <td>$100</td>
+            <td>Paid</td>
+          </tr>
+          <tr>
+            <th scope="row">INV-0123</th>
+            <td>Sep 2022</td>
+            <td>Jhon Smith</td>
+            <td>$100</td>
+            <td>Paid</td>
+          </tr>
+          <tr>
+            <th scope="row">INV-0123</th>
+            <td>Sep 2022</td>
+            <td>Jhon Smith</td>
+            <td>$100</td>
+            <td>Paid</td>
+          </tr>
+          <tr>
+            <th scope="row">INV-0123</th>
+            <td>Sep 2022</td>
+            <td>Jhon Smith</td>
+            <td>$100</td>
+            <td>Paid</td>
+          </tr>
+          <tr>
+            <th scope="row">INV-0123</th>
+            <td>Sep 2022</td>
+            <td>Jhon Smith</td>
+            <td>$100</td>
+            <td>Paid</td>
+          </tr>
+          <tr>
+            <th scope="row">INV-0123</th>
+            <td>Sep 2022</td>
+            <td>Jhon Smith</td>
+            <td>$100</td>
+            <td>Paid</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+  </div>
+</main>
 
 <script src="assets/js/bootstrap.min.js"></script>
 </body>
