--- a/assignments/css/Frameworks/ POS system Using Bootstrap/Items.html
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/Items.html
@@ -89,7 +89,7 @@
           </tr>
           <tr>
             <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
+            <td>Larry the Bird</td>
             <td>@twitter</td>
           </tr>
           </tbody>
