--- a/assignments/css/Frameworks/ POS system Using Bootstrap/Items.html
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/Items.html
@@ -91,6 +91,7 @@
             <th scope="row">3</th>
             <td>Larry the Bird</td>
             <td>@twitter</td>
+            <td>@mdo</td>
           </tr>
           </tbody>
         </table>
