--- a/assignments/css/Frameworks/ POS system Using Bootstrap/Order.html
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/Order.html
@@ -194,41 +194,55 @@
         <table class="table table-bordered table-hover">
           <thead>
           <tr>
-            <th scope="col">Order ID</th>
-            <th scope="col">Customer Name</th>
+            <th scope="col">Item ID</th>
+            <th scope="col">Item Name</th>
             <th scope="col">Price</th>
+            <th scope="col">Qty</th>
+            <th scope="col">Total</th>
           </tr>
           </thead>
           <tbody>
           <tr>
-            <td>D001</td>
-            <td>Amal</td>
-            <td>1000.0</td>
+            <td>PR011</td>
+            <td>Kirisamba</td>
+            <td>190.0</td>
+            <td>02</td>
+            <td>380.0</td>
           </tr>
           <tr>
-            <td>D002</td>
-            <td>Supun</td>
-            <td>350.0</td>
+            <td>PR001</td>
+            <td>Manchi Cookies</td>
+            <td>150.0</td>
+            <td>01</td>
+            <td>150.0</td>
           </tr>
           <tr>
-            <td>D003</td>
-            <td>Nilanthi</td>
+            <td>PR005</td>
+            <td>Samaposha</td>
+            <td>240.0</td>
+            <td>01</td>
+            <td>240.0</td>
+          </tr>
+          <tr>
+            <td>PR021</td>
+            <td>Milk</td>
             <td>1200.0</td>
+            <td>02</td>
+            <td>2400.0</td>
           </tr>
           <tr>
-            <td>D004</td>
-            <td>Jinadasa</td>
-            <td>1000.0</td>
+            <td>PR015</td>
+            <td>Soap</td>
+            <td>150.0</td>
+            <td>04</td>
+            <td>600.0</td>
           </tr>
           <tr>
-            <td>D005</td>
-            <td>Upul</td>
-            <td>800.0</td>
-          </tr>
-          <tr>
-            <td>D006</td>
-            <td>Nethmi</td>
-            <td>1450.0</td>
+            <td>PR006</td>
+            <td>Shampoo</td>
+            <td>65.0</td>
+            <td>02</td>
+            <td>130.0</td>
           </tr>
           </tbody>
         </table>
