--- a/assignments/css/Frameworks/ POS system Using Bootstrap/Customers.html
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/Customers.html
@@ -154,7 +154,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="UpdateCustomerLabel">Customer Save</h5>
+        <h5 class="modal-title" id="UpdateCustomerLabel">Customer Update</h5>
         <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
       </div>
       <div class="modal-body">
@@ -192,7 +192,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="DeleteCustomerModalLabel">Customer Save</h5>
+        <h5 class="modal-title" id="DeleteCustomerModalLabel">Customer Delete</h5>
         <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
       </div>
       <div class="modal-body">
