--- a/assignments/css/Frameworks/ POS system Using Bootstrap/Items.html
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/Items.html
@@ -5,6 +5,7 @@
   <title>POS System</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/Fontawesome/all.min.css" rel="stylesheet">
   <style>
     body{
       background: #e6ecff;
@@ -51,7 +52,9 @@
       <!--  Heading-->
       <div class="col-12 d-flex justify-content-between mt-3">
         <h3>Items</h3>
-        <button class="btn btn-outline-success" type="submit">Add Item</button>
+        <button class="btn btn-outline-success" data-bs-target="#AddItemModal" data-bs-toggle="modal" type="button">
+          Add Item
+        </button>
       </div>
 
       <!--  Search Bar-->
@@ -99,16 +102,128 @@
 
       <!--  Button-->
       <div class="modal-footer col-12 mb-3">
-
-        <button class="btn btn-danger me-1" data-bs-dismiss="modal" type="button">Delete Item</button>
-
-        <button class="btn btn-success me-1" type="button">Update Item</button>
-
+        <button class="btn btn-danger me-1" data-bs-target="#DeleteItemModal" data-bs-toggle="modal" type="button">
+          Delete Customer
+        </button>
+        <button class="btn btn-success me-1" data-bs-target="#UpdateItemModal" data-bs-toggle="modal" type="button">
+          Update Customer
+        </button>
         <button class="btn btn-warning me-1" type="button">Get All Item Details</button>
       </div>
     </div>
   </section>
 </main>
+
+<!--Add Item Modal -->
+<div aria-hidden="true" aria-labelledby="AddItemModalLabel" class="modal fade" id="AddItemModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="AddItemModalLabel">Item Save</h5>
+        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
+      </div>
+      <div class="modal-body">
+        <section>
+          <div class="mb-3">
+            <label class="form-label" for="AddItemFormFile">Item ID</label>
+            <input class="form-control" id="AddItemFormFile" type="text">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="AddItemFormFileMultiple">Item Name</label>
+            <input class="form-control" id="AddItemFormFileMultiple" multiple type="text">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="AddItemFormFileDisabled">Item Price</label>
+            <input class="form-control" id="AddItemFormFileDisabled" type="text">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="AddItemFormFileSm">Item Quantity</label>
+            <input class="form-control form-control-sm" id="AddItemFormFileSm" type="number">
+          </div>
+        </section>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-success" type="button">Add Item</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--Update Item Modal -->
+<div aria-hidden="true" aria-labelledby="UpdateItemLabel" class="modal fade" id="UpdateItemModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="UpdateItemLabel">Delete Update</h5>
+        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
+      </div>
+      <div class="modal-body">
+        <section>
+          <div class="mb-3">
+            <label class="form-label" for="UpdateItemFormFile">Item ID</label>
+            <div class="d-flex">
+              <input class="form-control me-1" id="UpdateItemFormFile" type="text">
+              <button class="btn btn-outline-success"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="UpdateItemFormFileMultiple">Item Name</label>
+            <input class="form-control" id="UpdateItemFormFileMultiple" multiple type="text">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="UpdateItemFormFileDisabled">Item Price</label>
+            <input class="form-control" id="UpdateItemFormFileDisabled" type="text">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="UpdateItemFormFileSm">Item Quantity</label>
+            <input class="form-control form-control-sm" id="UpdateItemFormFileSm" type="number">
+          </div>
+        </section>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-warning" type="button">Update Item</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--Delete Item Modal -->
+<div aria-hidden="true" aria-labelledby="DeleteItemModalLabel" class="modal fade" id="DeleteItemModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="DeleteItemModalLabel">Item Delete</h5>
+        <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
+      </div>
+      <div class="modal-body">
+        <section>
+          <div class="mb-3">
+            <label class="form-label" for="DeleteItemFormFile">Item ID</label>
+            <div class="d-flex">
+              <input class="form-control me-1" id="DeleteItemFormFile" type="text">
+              <button class="btn btn-outline-success"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="DeleteItemFormFileMultiple">Item Name</label>
+            <input class="form-control" id="DeleteItemFormFileMultiple" multiple type="text">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="DeleteItemFormFileDisabled">Item Price</label>
+            <input class="form-control" id="DeleteItemFormFileDisabled" type="text">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="DeleteItemFormFileSm">Item Quantity</label>
+            <input class="form-control form-control-sm" id="DeleteItemFormFileSm" type="number">
+          </div>
+        </section>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-danger" type="button">Delete Item</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <script src="assets/js/bootstrap.min.js"></script>
 </body>
